--- a/benchmark-ui/package.json
+++ b/benchmark-ui/package.json
@@ -21,6 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://lasselukkari.github.io/ArduinoServerShootout/",
   "browserslist": {
     "production": [
       ">0.2%",
